@@ -1,3 +1,8 @@
+2008-09-03  Doug Kwan  <dougkwan@google.com>
+
+	lto.c (lto_add_all_inlinees): Reset FAILED_REASON of edges to
+	CIF_OK instead of NULL.
+
 2008-09-02  Diego Novillo  <dnovillo@google.com>
 	    Simon Baldwin  <simonb@google.com>
 
